--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <h3 class="fcf-h3">Contact us</h3>
 
 
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="https://formsubmit.co/jigdergpiu@email.com">
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="https://formsubmit.co/jigdergpiu@gmail.com">
         
         <div class="fcf-form-group">
             <label for="Name" class="fcf-label">Your name</label>
